# docker-study

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
02-docker-basics/: Dockerfile  README.md
03-docker-compose/: Dockerfile  README.md  app.py  docker-compose-replicas.yml  docker-compose.yml  docker-swarm-stack.yml
03-docker-compose/nginx/: nginx-lb.conf  nginx-swarm.conf  nginx.conf
04-k8s/: README.md  install.md  uninstall.md
05-replicaset_and_deployment/: README.md  deployment.md  ha.md  nginx-deployment.yaml  nginx-replicaset.yaml  nginx-service-clusterip.yaml  nginx-service-external.yaml  nginx-service-lb.yaml  nginx-service-nodeport.yaml  replicaset.md  service.md
06-volume_configmap_secret/: .dockerignore  00-namespace.yaml  01-configmap.yaml  02-deployment-configmap.yaml  03-volume.yaml  04-deployment-volume.yaml  05-secret.yaml  06-full-deployment.yaml  Dockerfile  QUICKSTART.md  README.md  app.py  configmap.md  main.py  pyproject.toml  secret.md  volume.md
07-daemonset/: README.md  grafana-service.yaml  grafana.yaml  namespace.yaml  node-exporter-daemonset.yaml  node-exporter-service.yaml  prometheus-service.yaml  serviceaccount.yaml
08-ingress/: README.md  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
simple-file-server/: Dockerfile
