[project]
name = "test-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "python-multipart>=0.0.7",
]

[tool.uv.workspace]
members = [
    "03-test",
    "06-volume_configmap_secret",
]
